Fixed alignment on the userbar toggle.

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@
 		background-color: #f5f5f5 !important;  
 		font-size: 11px !important;
 		position: absolute !important;
-		top: 3px !important;  /* put the user info box on the top line of the header */
+		top: 2px !important;  /* put the user info box on the top line of the header */
 		right: 0px !important;    
 		padding: 6px 4px 5px 4px !important;
 		margin: 0px !important;
@@ -193,6 +193,8 @@
 	    color: gray !important;
 	    font-size: 20px !important;
 	    font-weight: bold !important;
+	    top: 1px !important;
+		max-height: 18px !important;
 	}
 	
 	#mailCount {
